<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<artifactId>be5-server</artifactId>
	<version>0.1.2-SNAPSHOT</version>
	<packaging>jar</packaging>

	<name>be5 server</name>
	<description>Core BE 5 server.</description>

	<parent>
		<groupId>com.developmentontheedge.be5</groupId>
		<artifactId>be5</artifactId>
		<version>0.0.3-SNAPSHOT</version>
	</parent>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<maven.compiler.source>1.8</maven.compiler.source>
		<maven.compiler.target>1.8</maven.compiler.target>
	</properties>

	<dependencies>

		<dependency>
			<groupId>com.developmentontheedge.be5</groupId>
			<artifactId>be5-metadata</artifactId>
			<version>0.3.1-SNAPSHOT</version>
		</dependency>

		<dependency>
			<groupId>com.developmentontheedge</groupId>
			<artifactId>beans-json</artifactId>
			<version>1.0.1-SNAPSHOT</version>
		</dependency>

		<dependency>
			<groupId>javax.inject</groupId>
			<artifactId>javax.inject</artifactId>
			<version>1</version>
		</dependency>

		<dependency>
			<groupId>javax.servlet</groupId>
			<artifactId>javax.servlet-api</artifactId>
			<version>3.0.1</version>
		</dependency>

		<dependency>
			<groupId>javax.websocket</groupId>
			<artifactId>javax.websocket-api</artifactId>
			<version>1.1</version>
		</dependency>

		<dependency>
			<groupId>com.google.code.gson</groupId>
			<artifactId>gson</artifactId>
			<version>2.5</version>
		</dependency>

		<dependency>
			<groupId>com.google.guava</groupId>
			<artifactId>guava</artifactId>
			<version>21.0</version>
		</dependency>

		<dependency>
			<groupId>commons-dbcp</groupId>
			<artifactId>commons-dbcp</artifactId>
			<version>1.4</version>
		</dependency>

		<dependency>
			<groupId>commons-dbutils</groupId>
			<artifactId>commons-dbutils</artifactId>
			<version>1.6</version>
		</dependency>

		<dependency>
			<groupId>com.github.ben-manes.caffeine</groupId>
			<artifactId>caffeine</artifactId>
			<version>2.5.3</version>
		</dependency>

		<dependency>
			<groupId>org.thymeleaf</groupId>
			<artifactId>thymeleaf</artifactId>
			<version>3.0.8.RELEASE</version>
		</dependency>

		<dependency>
			<groupId>org.codehaus.groovy</groupId>
			<artifactId>groovy-all</artifactId>
			<version>2.4.10</version>
		</dependency>

		<dependency>
			<groupId>com.h2database</groupId>
			<artifactId>h2</artifactId>
			<version>1.4.193</version>
			<scope>test</scope>
		</dependency>

		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>4.12</version>
		</dependency>

		<dependency>
			<groupId>org.mockito</groupId>
			<artifactId>mockito-all</artifactId>
			<version>1.10.19</version>
		</dependency>

		<dependency>
			<groupId>com.developmentontheedge.be5</groupId>
			<artifactId>be5-maven-plugin</artifactId>
			<version>0.1.1-SNAPSHOT</version>
		</dependency>

    </dependencies>
	
	<build>
		<resources>
			<resource>
				<directory>${basedir}</directory>
				<includes>
					<include>*.yaml</include>
				</includes>
			</resource>
		</resources>
		<plugins>
			<plugin>
				<groupId>com.developmentontheedge.be5</groupId>
				<artifactId>be5-maven-plugin</artifactId>
				<version>0.1.1-SNAPSHOT</version>
				<configuration>
					<projectPath>./src/test/resources/</projectPath>
					<saveProject>true</saveProject>
				</configuration>
				<dependencies>
					<dependency>
						<groupId>com.h2database</groupId>
						<artifactId>h2</artifactId>
						<version>1.4.193</version>
					</dependency>
				</dependencies>
			</plugin>
			<plugin>
				<groupId>org.codehaus.gmavenplus</groupId>
				<artifactId>gmavenplus-plugin</artifactId>
				<version>1.6</version>
				<executions>
					<execution>
						<goals>
							<goal>addTestSources</goal>
							<goal>compileTests</goal>
							<goal>removeTestStubs</goal>
						</goals>
					</execution>
				</executions>
			</plugin>

			<!--plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-javadoc-plugin</artifactId>
				<version>2.10.3</version>
				<executions>
					<execution>
						<id>attach-javadocs</id>
						<goals>
							<goal>jar</goal>
						</goals>
						<configuration>
							<quiet>true</quiet>
							<additionalparam>-Xdoclint:none</additionalparam>
							<tags>
								<tag>
									<name>todo</name>
									<placement>a</placement>
									<head>TODO:</head>
								</tag>
								<tag>
									<name>pending</name>
									<placement>a</placement>
									<head>PENDING:</head>
								</tag>
							</tags>
						</configuration>
					</execution>
				</executions>
			</plugin-->

		</plugins>
	</build>
</project>
